chore: Moved project into subfolder for monorepo

--- a/vue3-sample-material/package.json
+++ b/vue3-sample-material/package.json
@@ -3,10 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "test:unit": "vue-cli-service test:unit",
-    "lint": "vue-cli-service lint"
+    "start": "../node_modules/.bin/vue-cli-service serve",
+    "build": "../node_modules/.bin/vue-cli-service build",
+    "test:unit": "../node_modules/.bin/vue-cli-service test:unit",
+    "lint": "../node_modules/.bin/vue-cli-service lint"
   },
   "dependencies": {
     "core-js": "^3.6.5",
